k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptt-test-environment
  namespace: ptt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ptt-test-environment
  template:
    metadata:
      labels:
        app: ptt-test-environment
    spec:
      containers:
        - name: test-environment
          image: ghcr.io/2023-da-ptt/ptt-test-environment:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
