k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ptt-test-environment-service
  namespace: ptt
spec:
  selector:
    app: ptt-test-environment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
